fix: wrap long text in card

--- a/static/main.css
+++ b/static/main.css
@@ -315,6 +315,7 @@ a {
 .exercises__item--title {
     font-weight: 800;
     margin: 0;
+    overflow-wrap: break-word;
 }
 
 .exercises__item--info {
